fix: demosection overlap on smaller mobile devices

--- a/styles/demoSection.module.scss
+++ b/styles/demoSection.module.scss
@@ -44,7 +44,6 @@
 
 @media only screen and (max-width: 1000px) {
     .demoSection {
-        
         margin: 0 auto;
     }
 }
@@ -53,8 +52,7 @@
     .demoSection {
         width: 100%;
         min-width: auto;
-        height: 100vh;
 
-        margin-top: 4rem;
+        margin-top: 2rem;
     }
 }
